LPS-39726 - Fix alignment of control panel secondary nav

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -69,6 +69,7 @@ $dockbarOpenGradientStart: #0EA6F9;
 	/* ---------- Control panel secondary nav ---------- */
 
 	.control-panel-bar-secondary {
+		margin-left: 10px;
 		padding-top: 1.1em;
 
 		&.nav-pills {
